--- a/Modern Computer Vision with pytorch code/lab_1.ipynb
+++ b/Modern Computer Vision with pytorch code/lab_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -11,11 +11,11 @@
      "text": [
       "Defaulting to user installation because normal site-packages is not writeable\n",
       "Requirement already satisfied: torch in /Users/haodo/Library/Python/3.9/lib/python/site-packages (2.2.2)\n",
-      "Requirement already satisfied: filelock in /Users/haodo/Library/Python/3.9/lib/python/site-packages (from torch) (3.13.3)\n",
-      "Requirement already satisfied: networkx in /Users/haodo/Library/Python/3.9/lib/python/site-packages (from torch) (3.2.1)\n",
-      "Requirement already satisfied: typing-extensions>=4.8.0 in /Users/haodo/Library/Python/3.9/lib/python/site-packages (from torch) (4.10.0)\n",
-      "Requirement already satisfied: sympy in /Users/haodo/Library/Python/3.9/lib/python/site-packages (from torch) (1.12)\n",
       "Requirement already satisfied: fsspec in /Users/haodo/Library/Python/3.9/lib/python/site-packages (from torch) (2024.3.1)\n",
+      "Requirement already satisfied: typing-extensions>=4.8.0 in /Users/haodo/Library/Python/3.9/lib/python/site-packages (from torch) (4.10.0)\n",
+      "Requirement already satisfied: networkx in /Users/haodo/Library/Python/3.9/lib/python/site-packages (from torch) (3.2.1)\n",
+      "Requirement already satisfied: filelock in /Users/haodo/Library/Python/3.9/lib/python/site-packages (from torch) (3.13.3)\n",
+      "Requirement already satisfied: sympy in /Users/haodo/Library/Python/3.9/lib/python/site-packages (from torch) (1.12)\n",
       "Requirement already satisfied: jinja2 in /Users/haodo/Library/Python/3.9/lib/python/site-packages (from torch) (3.1.3)\n",
       "Requirement already satisfied: MarkupSafe>=2.0 in /Users/haodo/Library/Python/3.9/lib/python/site-packages (from jinja2->torch) (2.1.5)\n",
       "Requirement already satisfied: mpmath>=0.19 in /Users/haodo/Library/Python/3.9/lib/python/site-packages (from sympy->torch) (1.3.0)\n",
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
        "        [0., 0., 0.]])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -208,6 +208,194 @@
     "x = np.array([[1,2,3],[3,4,5]])\n",
     "y = torch.tensor(x)\n",
     "print(type(y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Collecting torchvision\n",
+      "  Downloading torchvision-0.17.2-cp39-cp39-macosx_11_0_arm64.whl (1.6 MB)\n",
+      "\u001b[K     |████████████████████████████████| 1.6 MB 1.6 MB/s eta 0:00:01\n",
+      "\u001b[?25hRequirement already satisfied: torch==2.2.2 in /Users/haodo/Library/Python/3.9/lib/python/site-packages (from torchvision) (2.2.2)\n",
+      "Requirement already satisfied: numpy in /Users/haodo/Library/Python/3.9/lib/python/site-packages (from torchvision) (1.26.4)\n",
+      "Requirement already satisfied: pillow!=8.3.*,>=5.3.0 in /Users/haodo/Library/Python/3.9/lib/python/site-packages (from torchvision) (10.3.0)\n",
+      "Requirement already satisfied: jinja2 in /Users/haodo/Library/Python/3.9/lib/python/site-packages (from torch==2.2.2->torchvision) (3.1.3)\n",
+      "Requirement already satisfied: filelock in /Users/haodo/Library/Python/3.9/lib/python/site-packages (from torch==2.2.2->torchvision) (3.13.3)\n",
+      "Requirement already satisfied: networkx in /Users/haodo/Library/Python/3.9/lib/python/site-packages (from torch==2.2.2->torchvision) (3.2.1)\n",
+      "Requirement already satisfied: typing-extensions>=4.8.0 in /Users/haodo/Library/Python/3.9/lib/python/site-packages (from torch==2.2.2->torchvision) (4.10.0)\n",
+      "Requirement already satisfied: sympy in /Users/haodo/Library/Python/3.9/lib/python/site-packages (from torch==2.2.2->torchvision) (1.12)\n",
+      "Requirement already satisfied: fsspec in /Users/haodo/Library/Python/3.9/lib/python/site-packages (from torch==2.2.2->torchvision) (2024.3.1)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in /Users/haodo/Library/Python/3.9/lib/python/site-packages (from jinja2->torch==2.2.2->torchvision) (2.1.5)\n",
+      "Requirement already satisfied: mpmath>=0.19 in /Users/haodo/Library/Python/3.9/lib/python/site-packages (from sympy->torch==2.2.2->torchvision) (1.3.0)\n",
+      "Installing collected packages: torchvision\n",
+      "Successfully installed torchvision-0.17.2\n",
+      "\u001b[33mWARNING: You are using pip version 21.2.4; however, version 24.0 is available.\n",
+      "You should consider upgrading via the '/Library/Developer/CommandLineTools/usr/bin/python3 -m pip install --upgrade pip' command.\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip3 install torchvision"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from torch import nn\n",
+    "from torch.utils.data import TensorDataset, Dataset, DataLoader\n",
+    "from torch.optim import Adam, SGD"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "device = 'cpu'\n",
+    "from torchvision import datasets\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([2, 1, 4, 4])\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_train = torch.tensor([[[[1,2,3,4],[2,3,4,5], \n",
+    "                       [5,6,7,8],[1,3,4,5]]],        \n",
+    "                     [[[-1,2,3,-4],[2,-3,4,5],          \n",
+    "                          [-5,6,-7,8],[-1,-3,-4,-5]]]]).to(device).float()\n",
+    "X_train /= 8\n",
+    "y_train = torch.tensor([0,1]).to(device).float()\n",
+    "print(X_train.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = nn.Sequential(\n",
+    "    nn.Conv2d(1,1,kernel_size=3),\n",
+    "    nn.MaxPool2d(kernel_size=2),\n",
+    "    nn.ReLU(),\n",
+    "    nn.Flatten(),\n",
+    "    nn.Linear(1,1),\n",
+    "    nn.Sigmoid()\n",
+    ")\n",
+    "loss = nn.BCELoss()\n",
+    "optimizer = Adam(model.parameters(),lr = 1e-3)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Requirement already satisfied: torch_summary in /Users/haodo/Library/Python/3.9/lib/python/site-packages (1.4.5)\n",
+      "\u001b[33mWARNING: You are using pip version 21.2.4; however, version 24.0 is available.\n",
+      "You should consider upgrading via the '/Library/Developer/CommandLineTools/usr/bin/python3 -m pip install --upgrade pip' command.\u001b[0m\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install torch_summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==========================================================================================\n",
+      "Layer (type:depth-idx)                   Output Shape              Param #\n",
+      "==========================================================================================\n",
+      "├─Conv2d: 1-1                            [-1, 1, 2, 2]             10\n",
+      "├─MaxPool2d: 1-2                         [-1, 1, 1, 1]             --\n",
+      "├─ReLU: 1-3                              [-1, 1, 1, 1]             --\n",
+      "├─Flatten: 1-4                           [-1, 1]                   --\n",
+      "├─Linear: 1-5                            [-1, 1]                   2\n",
+      "├─Sigmoid: 1-6                           [-1, 1]                   --\n",
+      "==========================================================================================\n",
+      "Total params: 12\n",
+      "Trainable params: 12\n",
+      "Non-trainable params: 0\n",
+      "Total mult-adds (M): 0.00\n",
+      "==========================================================================================\n",
+      "Input size (MB): 0.00\n",
+      "Forward/backward pass size (MB): 0.00\n",
+      "Params size (MB): 0.00\n",
+      "Estimated Total Size (MB): 0.00\n",
+      "==========================================================================================\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "==========================================================================================\n",
+       "Layer (type:depth-idx)                   Output Shape              Param #\n",
+       "==========================================================================================\n",
+       "├─Conv2d: 1-1                            [-1, 1, 2, 2]             10\n",
+       "├─MaxPool2d: 1-2                         [-1, 1, 1, 1]             --\n",
+       "├─ReLU: 1-3                              [-1, 1, 1, 1]             --\n",
+       "├─Flatten: 1-4                           [-1, 1]                   --\n",
+       "├─Linear: 1-5                            [-1, 1]                   2\n",
+       "├─Sigmoid: 1-6                           [-1, 1]                   --\n",
+       "==========================================================================================\n",
+       "Total params: 12\n",
+       "Trainable params: 12\n",
+       "Non-trainable params: 0\n",
+       "Total mult-adds (M): 0.00\n",
+       "==========================================================================================\n",
+       "Input size (MB): 0.00\n",
+       "Forward/backward pass size (MB): 0.00\n",
+       "Params size (MB): 0.00\n",
+       "Estimated Total Size (MB): 0.00\n",
+       "=========================================================================================="
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from torchsummary import summary\n",
+    "summary(model, X_train)"
    ]
   },
   {
